test/hello-argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-argo-ingress
  namespace: test
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - hello.k8s.bumgu.com
    secretName: k8s-bumgu-com-tls
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-argo-service
            port:
              number: 3000
